updating .kitchen.cloud.yml

--- a/.kitchen.cloud.yml
+++ b/.kitchen.cloud.yml
@@ -1,14 +1,13 @@
 #<% require 'kitchen-sync' %>
 ---
 driver_config:
-  digitalocean_api_token: <%= ENV['DIGITALOCEAN_API_TOKEN'] %>
-  google_client_email: <%= ENV['GOOGLE_CLIENT_EMAIL'] %>
-  google_key_location: <%= ENV['GOOGLE_KEY_LOCATION'] %>
-  google_project: <%= ENV['GOOGLE_PROJECT'] %>
-  joyent_username: <%= ENV['SDC_CLI_ACCOUNT'] %>
-  joyent_keyfile: <%= ENV['SDC_CLI_IDENTITY'] %>
-  joyent_keyname: <%= ENV['SDC_CLI_KEY_ID'] %>
-  joyent_url: <%= ENV['SDC_CLI_URL'] %>
+  digitalocean_access_token: <%= ENV['DIGITALOCEAN_API_TOKEN'] %>
+  # google_key_location: <%= ENV['GOOGLE_KEY_LOCATION'] %>
+  # google_project: <%= ENV['GOOGLE_PROJECT'] %>
+  # joyent_username: <%= ENV['SDC_CLI_ACCOUNT'] %>
+  # joyent_keyfile: <%= ENV['SDC_CLI_IDENTITY'] %>
+  # joyent_keyname: <%= ENV['SDC_CLI_KEY_ID'] %>
+  # joyent_url: <%= ENV['SDC_CLI_URL'] %>
   aws_access_key_id: <%= ENV['AWS_ACCESS_KEY_ID'] %>
   aws_secret_access_key: <%= ENV['AWS_SECRET_ACCESS_KEY'] %>
   aws_ssh_key_id: <%= ENV['AWS_KEYPAIR_NAME'] %>
@@ -21,7 +20,7 @@ provisioner:
 
 platforms:
 - name: centos-5.8
-  driver_plugin: digital_ocean
+  driver_plugin: digitalocean
   driver_config:
     size: 2gb
     image: centos-5-8-x64
@@ -30,7 +29,7 @@ platforms:
     ssh_key: <%= ENV['DIGITALOCEAN_SSH_KEY_PATH'] %>
 
 - name: centos-6.5
-  driver_plugin: digital_ocean
+  driver_plugin: digitalocean
   driver_config:
     size: 2gb
     image: centos-6-5-x64
@@ -39,7 +38,7 @@ platforms:
     ssh_key: <%= ENV['DIGITALOCEAN_SSH_KEY_PATH'] %>
 
 - name: centos-7.0
-  driver_plugin: digital_ocean
+  driver_plugin: digitalocean
   driver_config:
     size: 2gb
     image: centos-7-0-x64
@@ -63,20 +62,20 @@ platforms:
 #   run_list:
 #   - recipe[selinux::disabled]
 
-- name: redhat-7.0
-  driver_plugin: ec2
-  driver_config:
-    image_id: ami-a8d369c0
-    username: ec2-user
-    ssh_key: <%= ENV['EC2_SSH_KEY_PATH'] %>
-  run_list:
-  - recipe[selinux::disabled]
+# - name: redhat-7.0
+#   driver_plugin: ec2
+#   driver_config:
+#     image_id: ami-a8d369c0
+#     username: ec2-user
+#     ssh_key: <%= ENV['EC2_SSH_KEY_PATH'] %>
+#   run_list:
+#   - recipe[selinux::disabled]
 
-- name: fedora-20
-  driver_plugin: digital_ocean
+- name: fedora-21
+  driver_plugin: digitalocean
   driver_config:
     size: 2gb
-    image: fedora-20-x64
+    image: fedora-21-x64
     region: <%= ENV['DIGITALOCEAN_REGION'] %>
     ssh_key_ids: <%= ENV['DIGITALOCEAN_SSH_KEYS'] %>
     ssh_key: <%= ENV['DIGITALOCEAN_SSH_KEY_PATH'] %>
@@ -89,20 +88,18 @@ platforms:
     ssh_key: <%= ENV['EC2_SSH_KEY_PATH'] %>
 
 - name: debian-7.0
-  driver_plugin: gce
+  driver_plugin: digitalocean
   driver_config:
-    image_name: debian-7-wheezy-v20131120
-    zone: <%= ENV['GCE_ZONE'] %>
-    area: <%= ENV['GCE_AREA'] %>
-    network: <%= ENV['GCE_NETWORK'] %>
-    username: <%= ENV['GCE_USERNAME'] %>
-    public_key_path: <%= ENV['GCE_PUBLIC_KEY_PATH'] %>
-    ssh_key: <%= ENV['GCE_SSH_KEY_PATH'] %>
+    size: 2gb
+    image: debian-7-0-x64
+    region: <%= ENV['DIGITALOCEAN_REGION'] %>
+    ssh_key_ids: <%= ENV['DIGITALOCEAN_SSH_KEYS'] %>
+    ssh_key: <%= ENV['DIGITALOCEAN_SSH_KEY_PATH'] %>
   run_list:
   - recipe[apt]
 
 - name: ubuntu-12.04
-  driver_plugin: digital_ocean
+  driver_plugin: digitalocean
   driver_config:
     size: 2gb
     image: ubuntu-12-04-x64
@@ -113,7 +110,7 @@ platforms:
   - recipe[apt]
 
 - name: ubuntu-14.04
-  driver_plugin: digital_ocean
+  driver_plugin: digitalocean
   driver_config:
     size: 2gb
     image: ubuntu-14-04-x64
