--- a/.kitchen.cloud.yml
+++ b/.kitchen.cloud.yml
@@ -17,7 +17,7 @@ driver_config:
 
 provisioner:
   name: chef_zero
-  require_chef_omnibus: latest
+  require_chef_omnibus: 12.3.0
 
 platforms:
 - name: centos-5.8
