--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -24,17 +24,17 @@ platforms:
   - name: ubuntu-14.04
     run_list:
       - recipe[apt]
-  - name: freebsd-9.2
-    run_list:
-      - recipe[freebsd::portsnap]
-  - name: freebsd-10.0 # unsupported until Chef 11.14.0
-  - name: omnios-151006
-    driver:
-      box: omnios-r151006j-r1
-      box_url: http://omnios.omniti.com/media/OmniOS_r151008j-r1.box
-    run_list:
-      - recipe[ips-omniti]
- 
+#  - name: freebsd-9.2
+#    run_list:
+#      - recipe[freebsd::portsnap]
+#  - name: freebsd-10.0 # unsupported until Chef 11.14.0
+#  - name: omnios-151006
+#    driver:
+#      box: omnios-r151006j-r1
+#      box_url: http://omnios.omniti.com/media/OmniOS_r151008j-r1.box
+#    run_list:
+#      - recipe[ips-omniti]
+
 suites:
   #
   # service
