--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -13,9 +13,6 @@ MethodLength:
 LineLength:
   Enabled: false
 
-# HashSyntax:
-#  EnforcedStyle: hash_rockets
-
 Documentation:
   Enabled: false
 
@@ -36,4 +33,10 @@ AllCops:
     - 'Guardfile'
 
 Style/GuardClause:
+  Enabled: false
+
+Lint/HandleExceptions:
+  Enabled: false
+
+Metrics/ModuleLength:
   Enabled: false
