--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,42 +1,31 @@
-AlignParameters:
-  Enabled: false
-
-Encoding:
-  Enabled: false
-
-ClassLength:
-  Enabled: false
-
-MethodLength:
-  Enabled: false
-
-LineLength:
-  Enabled: false
-
-Documentation:
-  Enabled: false
-
-PerceivedComplexity:
-  Enabled: false
-
-CyclomaticComplexity:
-  Enabled: false
-
-Style/FileName:
-  Enabled: false
-
-Metrics/AbcSize:
-  Enabled: false
-
 AllCops:
   Exclude:
-    - 'Guardfile'
+    - vendor/**/*
+    - Guardfile
 
-Style/GuardClause:
+AlignParameters:
   Enabled: false
-
-Lint/HandleExceptions:
+ClassLength:
   Enabled: false
-
-Metrics/ModuleLength:
+CyclomaticComplexity:
+  Enabled: false
+Documentation:
+  Enabled: false
+Encoding:
+  Enabled: false
+Style/FileName:
+  Enabled: false
+LineLength:
+  Enabled: false
+MethodLength:
+  Enabled: false
+Metrics/AbcSize:
+  Enabled: false
+PerceivedComplexity:
+  Enabled: false
+SingleSpaceBeforeFirstArg:
+  Enabled: false
+Style/ClassAndModuleChildren:
+  Enabled: false
+Style/FileName:
   Enabled: false
