Empty Instance Test with Centos

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -112,6 +112,16 @@ suites:
       mysql:
        version: '5.7'
 
+  - name: service57-empty-instance
+    run_list:
+    - recipe[mysql_service_test::empty-instance]
+    includes: [
+      'centos-7.1'
+    ]
+    attributes:
+      mysql:
+       version: '5.7'
+
   - name: service50-multi
     run_list:
     - recipe[mysql_service_test::multi]
