--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -143,6 +143,7 @@ suites:
   - name: service50-multi
     run_list:
     - recipe[mysql_service_test::multi]
+    - recipe[mysql_service_test::outth-ini]
     includes: [
       'centos-5'
     ]
@@ -153,6 +154,11 @@ suites:
        data_dir: '/data/instance-2'
        run_user: 'bob'
        initial_root_password: 'string with spaces'
+      sparrow:
+       plugin:
+         list: [
+             'swat-mysql-cookbook'
+         ]
 
   - name: service51-multi
     run_list:
