--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -178,6 +178,8 @@ suites:
   - name: service55-multi
     run_list:
     - recipe[mysql_service_test::multi]
+    - recipe[mysql_service_test::outth-ini]
+    - recipe[sparrow]
     includes: [
       'centos-5',
       'centos-6',
@@ -192,6 +194,11 @@ suites:
        data_dir: '/data/instance-2'
        run_user: 'bob'
        initial_root_password: 'string with spaces'
+      sparrow:
+       plugin:
+         list: [
+             'swat-mysql-cookbook'
+         ]
 
   - name: service56-multi
     run_list:
